addon/styles/addon.css
.advanced-combo-box{
  display: inline-block;
}

.advanced-combo-box.combobox-disabled:not(.combobox-label-only) .input-group{
    background-color: grey;
}

 .advanced-combo-box.combobox-disabled:not(.combobox-label-only) .combo-input{
  background-color: grey;
  color: white;
}

.advanced-combo-box .input-group{
  border: 1px solid black;
}

.advanced-combo-box .input-group:focus{
  outline: none;
}

 .advanced-combo-box .dropdown-icon{
   outline: none;
 }
 .advanced-combo-box .input-wrapper {
   border: none;
   outline: none;
   height: 20px;
 }
.advanced-combo-box .input-wrapper[readonly="readonly"] {
  pointer-events: none;
}

.advanced-combo-box .input-wrapper[readonly="readonly"] input{
  cursor: default;
  pointer-events: none; /*this will prevent cursor showing in readonly mode in Firefox (and perhaps IE, too)*/
  caret-color: transparent;
}

 .advanced-combo-box .input-wrapper input {
   padding-top: 1px;
 }


.advanced-combo-box input{
  border: none;
  width: calc( 100% - 20px);
  outline: none;
  text-overflow: ellipsis;
}

.advanced-combo-box .dropdown{
  border: 1px solid black;
  margin: 2px 0;
  /*position: fixed;*/
  z-index: 99999;
  list-style: none;
  padding: 0;
  background: white;
  overflow-y: auto;
  padding-bottom: 1px;
  padding-top: 1px;
}

.advanced-combo-box .dropdown:focus {
  outline: none;
}

.ember-modal-dialog.combobox-mobile-dialog{
  padding: 0;
  min-width: 100px;
}

 .combobox-mobile-dialog .dropdown{
   margin: 0;
   z-index: 99999;
   list-style: none;
   padding: 0;
   background: white;
   overflow-y: auto;
   padding-left: 10px;
   padding-right: 10px;
   max-height: 300px;
   max-height: 30vh;
   -webkit-transform: translateZ(0);
    -webkit-filter: blur(0);
 }
 .combobox-mobile-dialog button{
   margin: 10px;
 }

.combobox-mobile-dialog .intput-filter{
  margin: 10px;
}

.combobox-mobile-dialog .dropdown li{
  padding: 10px 0;
}


.advanced-combo-box .dropdown li.selected{
  background-color: grey;
}


.advanced-combo-box.dropdown-hidden .dropdown{
  display: none;
}

.advanced-combo-box.dropdown-hidden :not(.dropdown-icon) {
  cursor: default;
}

.advanced-combo-box:not(.combobox-disabled) .dropdown-icon{
  cursor: pointer;
}

.advanced-combo-box.combobox-label-only .dropdown-icon{
  visibility: hidden;
}

.advanced-combo-box.combobox-label-only .combo-input{
  cursor: default;
}

.advanced-combo-box.lazy-loading-in-progress .input-group .dropdown-icon{
  font-size: 14px;
}

.ember-modal-dialog {
  border-radius: 8px;
  background-color: #fff;
  box-shadow: 0 0 10px #222;
  padding: 10px;
}
.ember-modal-overlay.translucent {
  background-color: rgba(128, 128, 128, 0.77);
}

.ember-modal-overlay {
  height: 100vh;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 50;
}
.ember-modal-dialog {
  z-index: 50;
  position: fixed;
}

.ember-modal-dialog.ember-modal-dialog-in-place {
  position: relative;
}

.ember-modal-dialog {
  z-index: 51;
  position: fixed;
}
.ember-modal-dialog.emd-in-place {
  position: static;
}
.ember-modal-wrapper.emd-static.emd-wrapper-target-attachment-center .ember-modal-dialog {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.ember-modal-wrapper.emd-animatable.emd-wrapper-target-attachment-center {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 50;
  display: flex;
  align-items: center;
  justify-content: center;
}
.ember-modal-wrapper.emd-animatable.emd-wrapper-target-attachment-center .ember-modal-overlay {
  display: flex;
  align-items: center;
  justify-content: center;
}
.ember-modal-wrapper.emd-animatable .ember-modal-dialog {
  position: relative;
}
.ember-modal-overlay {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 50;
}

